router/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # TODO true
spec:
  rules:
    - host: router.whiskeysierra.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  name: http
  tls:
    - hosts:
        - router.whiskeysierra.ddns.net
      secretName: router-whiskeysierra-ddns-net-tls
